RESOLVED FIXED162180
REGRESSION (r205275): LOG_WITH_STREAM() macros are all compiled in release builds now
https://bugs.webkit.org/show_bug.cgi?id=162180
Summary REGRESSION (r205275): LOG_WITH_STREAM() macros are all compiled in release bu...
Keith Rollin
Reported 2016-09-19 11:05:42 PDT
After https://trac.webkit.org/changeset/205275, all LOG_WITH_STREAM macros are now enabled in release builds, because LogMacros.h has: #if LOG_DISABLED && RELEASE_LOG_DISABLED ... #else #define LOG_WITH_STREAM(.....) #endif LOG() is OK, so we should make them match. <rdar://problem/28347599>
Attachments
Patch (3.46 KB, patch)
2016-09-19 13:44 PDT, Keith Rollin
no flags
Keith Rollin
Comment 1 2016-09-19 11:45:04 PDT
Disable those macros in RELEASE_LOG_DISABLED mode. With that disabled, there were a couple of downstream effects. First, GraphicsContextCG.cpp would no longer access a local variable in release mode, so that variable needed to be conditionally defined. Second, the inclusion of logFunctionResult also needed to be fiddled with.
Keith Rollin
Comment 2 2016-09-19 13:44:49 PDT
WebKit Commit Bot
Comment 3 2016-09-19 15:01:41 PDT
Comment on attachment 289253 [details] Patch Clearing flags on attachment: 289253 Committed r206120: <http://trac.webkit.org/changeset/206120>
WebKit Commit Bot
Comment 4 2016-09-19 15:01:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.