REGRESSION (r205275): LOG_WITH_STREAM() macros are all compiled in release builds now https://bugs.webkit.org/show_bug.cgi?id=162180

Reviewed by Simon Fraser.

Disable LOG_WITH_STREAM in release mode. Along with this, remove a
local variable in GraphcsContextCG.cpp in release mode that's no
longer referenced. And adjust logFunctionResult so that it gets
defined only in debug mode, too, to match its declaration in
LogMacros.h.

No new tests -- there are no tests for logging.

* platform/LogMacros.h:
* platform/Logging.cpp:
* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::drawNativeImage):


Canonical link: https://commits.webkit.org/180278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206120 268f45cc-cd09-0410-ab3c-d52691b4dbfc